test/files/neg/macro-invalidusage-badargs-b.check
Macros_Test_2.scala:7: error: macros cannot be partially applied
  val s: String = foo
                  ^
one error found
